# IntelliTraffic

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  test_system.py
backend/: anomalies.py  database.py  main.py  pipeline.py
frontend/: app.js  index.html  style.css
