[project]
name = "traffic-ai"
version = "0.1.0"
description = "Smart Traffic Monitoring System"
dependencies = [
    "ultralytics>=8.1.0",
    "opencv-python-headless>=4.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "aiofiles>=23.0.0",
    "numpy>=1.24.0"
]

[tool.vercel]
entrypoint = "backend.main:app"
